added logout feature

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,18 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+<% if (!username) { %> 
+  <form class="form-inline" action="/login" method="POST">
+    <div class="form-group mb-2">
+      <input class="form-control" type="text" name="username" placeholder="Username" style="width: 173px; margin: 1em">
+      <button type="submit" class="btn btn-primary">Log in</button>
+    </div>
+  </form>
+  <% } else {%>
+     <% console.log(username) %>
+    <form class="form-inline" action="/logout" method="POST">
+    <button type="submit" class="btn btn-primary">Log out</button>
+    <% } %>
+    </form>
   </nav>
-</header>
+</header> 
