--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -13,8 +13,8 @@
   <body>
     <form class="form-inline" action="/register" method="POST">
     <div class="form-group mb-2">
-      <label for="username">Username:</label>
-      <input class="form-control" type="text" name="username" placeholder="Username" style="width: 300px; margin: 1em">
+      <label for="email">Email:</label>
+      <input class="form-control" type="text" name="email" placeholder="Email" style="width: 300px; margin: 1em">
     </div>
     <div class="form-group mb-2">
       <label for="password">Password:</label>
