--- a/views/register_page.ejs
+++ b/views/register_page.ejs
@@ -9,21 +9,26 @@
 
     <title>Sign up</title>
   </head>
-
+  <header>
+    <%- include('partials/_header') %>
+  </header>
   <body>
-    <form class="form-inline" action="/register" method="POST">
+    <main style="margin: 1em;">
+      <h3>Register</h3>
+    <form action="/register" method="POST">
     <div class="form-group mb-2">
       <label for="email">Email:</label>
-      <input class="form-control" type="text" name="email" placeholder="Email" style="width: 300px; margin: 1em">
+      <input class="form-control" type="text" name="email" placeholder="Email" style="width: 300px">
     </div>
     <div class="form-group mb-2">
       <label for="password">Password:</label>
-      <input class="form-control" type="text" name="password" placeholder="Password" style="width: 300px; margin: 1em">
+      <input class="form-control" type="text" name="password" placeholder="Password" style="width: 300px">
     </div>
     <div class="form-group mb-2">
       <button type="submit" class="btn btn-primary">Submit</button>
     </div>
     </form>
+    </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
