--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,11 +10,9 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <% if (!userID) { %>
-      <div class="navbar-nav" style="display: flex; justify-content: flex-end">
-        <nav>
+        <div class="navbar-nav">
         <a class="nav-item nav-link" href="/login">Log in</a>
         <a class="nav-item nav-link" href="/register">Register</a>
-      </nav>
       </div>
       <% } else { %>
         <div class="navbar-nav" style="display: flex; justify-content: flex-end">
