Add current user email info in header, doesn't look that pretty atm

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,6 +20,11 @@
           <div class="form-group mb-2"></div>
           <button type="submit" class="btn btn-primary">Log out</button>
           </form>
+          <div> 
+            <% console.log(email); %>
+            Logged in as: <%= email %>
+          </div>
+          </div>
           <% } %>
     </div>
   </nav>
